// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`ProfileOption renders a toggle option correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "information-outline",
                    "onPress": [class Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "REM Stimulation",
                      ],
                      "props": {
                        "ellipsizeMode": undefined,
                        "maxFontSizeMultiplier": undefined,
                        "numberOfLines": 1,
                        "ref": {
                          "current": null,
                        },
                        "selectable": false,
                        "style": [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 16,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            [
                              {
                                "color": "#ffffff",
                              },
                              undefined,
                            ],
                          ],
                        ],
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": [
                      {
                        "paddingLeft": 16,
                      },
                      {
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                    "testID": "undefined-content",
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "description": undefined,
                    "disabled": false,
                    "field": {
                      "type": "toggle",
                    },
                    "left": [Function],
                    "onValueChange": undefined,
                    "style": [
                      {
                        "alignSelf": "center",
                        "marginLeft": 16,
                        "marginRight": 0,
                        "marginVertical": 0,
                      },
                      {
                        "alignSelf": "center",
                      },
                    ],
                    "thumbColor": undefined,
                    "title": "REM Stimulation",
                    "trackColor": {
                      "false": "#00ffe6",
                      "true": "#00ffe6",
                    },
                    "value": true,
                  },
                  "type": "Switch",
                },
              ],
              "props": {
                "style": [
                  {
                    "flexDirection": "row",
                    "marginVertical": 6,
                    "width": "100%",
                  },
                  undefined,
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "accessible": true,
            "disabled": true,
            "field": {
              "type": "toggle",
            },
            "onPress": undefined,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "ref": null,
            "style": [Function],
            "testID": undefined,
          },
          "type": "Pressable",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`ProfileOption renders in failed state with failedConditionMessage 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "color": "#ffffff",
                    "name": "information-outline",
                    "onPress": [class Function],
                    "size": 40,
                  },
                  "type": "Icon",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": [
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "REM Stimulation",
                      ],
                      "props": {
                        "ellipsizeMode": undefined,
                        "maxFontSizeMultiplier": undefined,
                        "numberOfLines": 1,
                        "ref": {
                          "current": null,
                        },
                        "selectable": false,
                        "style": [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 16,
                            },
                            {
                              "color": "rgba(28, 27, 31, 1)",
                            },
                            [
                              {
                                "color": "#ffffff",
                              },
                              undefined,
                            ],
                          ],
                        ],
                      },
                      "type": "Text",
                    },
                    {
                      "$$typeof": Symbol(react.test.json),
                      "children": [
                        "Requires firmware >= 2.0",
                      ],
                      "props": {
                        "ellipsizeMode": undefined,
                        "maxFontSizeMultiplier": undefined,
                        "numberOfLines": 2,
                        "onTextLayout": [Function],
                        "ref": {
                          "current": null,
                        },
                        "selectable": false,
                        "style": [
                          {
                            "textAlign": "left",
                          },
                          {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontWeight": "400",
                            "letterSpacing": 0,
                          },
                          {
                            "writingDirection": "ltr",
                          },
                          [
                            {
                              "fontSize": 14,
                            },
                            {
                              "color": "rgba(73, 69, 79, 1)",
                            },
                            [
                              {
                                "color": "#9B9B9B",
                              },
                              undefined,
                            ],
                          ],
                        ],
                      },
                      "type": "Text",
                    },
                  ],
                  "props": {
                    "style": [
                      {
                        "paddingLeft": 16,
                      },
                      {
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "center",
                      },
                      undefined,
                    ],
                    "testID": "undefined-content",
                  },
                  "type": "View",
                },
                {
                  "$$typeof": Symbol(react.test.json),
                  "children": null,
                  "props": {
                    "description": "Requires firmware >= 2.0",
                    "disabled": true,
                    "field": {
                      "type": "toggle",
                    },
                    "left": [Function],
                    "onValueChange": undefined,
                    "style": [
                      {
                        "alignSelf": "center",
                        "marginLeft": 16,
                        "marginRight": 0,
                      },
                      {
                        "alignSelf": "center",
                      },
                    ],
                    "thumbColor": undefined,
                    "title": "REM Stimulation",
                    "trackColor": {
                      "false": "#00ffe6",
                      "true": "#00ffe6",
                    },
                    "value": true,
                  },
                  "type": "Switch",
                },
              ],
              "props": {
                "style": [
                  {
                    "flexDirection": "row",
                    "marginVertical": 6,
                    "width": "100%",
                  },
                  undefined,
                ],
              },
              "type": "View",
            },
          ],
          "props": {
            "accessible": true,
            "disabled": true,
            "field": {
              "type": "toggle",
            },
            "onPress": undefined,
            "onPressIn": [Function],
            "onPressOut": [Function],
            "ref": null,
            "style": [Function],
            "testID": undefined,
          },
          "type": "Pressable",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
